--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -79,6 +79,14 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 main">
+                {# ...or you can read and display every flash message available #}
+                {% for type, flash_messages in app.session.flashBag.all %}
+                    {% for flash_message in flash_messages %}
+                        <div class="alert alert-{{ type }}">
+                            {{ flash_message }}
+                        </div>
+                    {% endfor %}
+                {% endfor %}
 
                 {% block body %}{% endblock %}
                 {% block javascripts %}{% endblock %}
