--- a/src/TweetProxyBundle/Resources/views/Default/index.html.twig
+++ b/src/TweetProxyBundle/Resources/views/Default/index.html.twig
@@ -14,6 +14,7 @@
         <tr>
             {# sorting of properties based on query components #}
             <th>{{ knp_pagination_sortable(pagination, 'Id', 't.id') }}</th>
+            <th>Profile image</th>
             <th{% if pagination.isSorted('t.username') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Username', 't.username') }}</th>
             <th>{{ knp_pagination_sortable(pagination, 'Name', 't.name') }}</th>
             <th>URL</th>
@@ -25,10 +26,11 @@
         {% for result in pagination %}
             <tr {% if loop.index is odd %}class="color"{% endif %}>
                 <td>{{ result.id }}</td>
-                <td>{{ result.username }}</td>
+                <td><img src="{{ result.profileImage }}"></td>
+                <td><a href="https://twitter.com/{{ result.username }}" target="_blank">{{ result.username }}</a></td>
                 <td>{{ result.name }}</td>
                 <td><a href="{{ result.url }}">{{ result.url }}</a></td>
-                <td>{{ result.description }}</td>
+                <td>{{ result.description|raw }}</td>
                 <td><a href="{{ url('profile', {'username' : result.username}) }}">View Profile</a></td>
             </tr>
         {% endfor %}
