working on search

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -47,13 +47,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="{{ url('tweet_proxy_homepage') }} }}">All users</a>
+                        <a href="{{ url('tweet_proxy_homepage') }}">All users</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
+                        <a href="{{ url('cron_fetch_tweet') }}">Cron</a>
                     </li>
                 </ul>
             </div>
