--- a/src/TweetProxyBundle/Resources/views/Default/index.html.twig
+++ b/src/TweetProxyBundle/Resources/views/Default/index.html.twig
@@ -1,11 +1,36 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    Add new user
-    <form method="POST" action="{{ url('add_user') }}">
-        <input type="text" name="username" placeholder="Username">
-        <input type="submit" name="Submit">
+    ADD NEW USER
+    <form class="form-inline" method="POST" action="{{ url('add_user') }}">
+        <div class="form-group">
+            <label>Username</label>
+            <input type="text" name="username" placeholder="Username" class="form-control">
+        </div>
+
+        <input type="submit" name="Submit" class="form-control">
     </form>
+
+    <hr>
+
+    SEARCH
+    <form class="form-inline" method="GET" action="{{ url('search_tweet') }}">
+        <div class="form-group">
+            <label>Tweet</label>
+            <input type="text" name="term" placeholder="Tweet" class="form-control">
+        </div>
+        <div class="form-group">
+            <label>and/or Username</label>
+            <select name="username" class="form-control">
+                <option> -</option>
+                {% for result in dropDownUsers %}
+                    <option value="{{ result.id }}"> {{ result.username }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <input type="submit" name="Submit" class="form-control">
+    </form>
+
     <hr>
     <div class="count">
         Total Pages: {{ pagination.getTotalItemCount }}
