--- a/src/TweetProxyBundle/Resources/views/Default/index.html.twig
+++ b/src/TweetProxyBundle/Resources/views/Default/index.html.twig
@@ -20,7 +20,7 @@
             <input type="text" name="term" placeholder="Tweet" class="form-control">
         </div>
         <div class="form-group">
-            <label>and/or Username</label>
+            <label>and Username</label>
             <select name="user_id" class="form-control">
                 <option value=""> -</option>
                 {% for result in dropDownUsers %}
