--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,8 +39,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
-                    <img src="http://placehold.it/150x50&text=Logo" alt="">
+                <a class="navbar-brand" href="/">
+                    <img src="/images/burza.png" alt="" style="max-height: 40px;">
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
